--- a/Source/Android/app/src/main/AndroidManifest.xml
+++ b/Source/Android/app/src/main/AndroidManifest.xml
@@ -112,7 +112,7 @@
         <activity
             android:name=".activities.ConvertActivity"
             android:exported="false"
-            android:theme="@style/DolphinBase" />
+            android:theme="@style/DolphinSettingsBase" />
 
         <activity
             android:name=".features.cheats.ui.CheatsActivity"
@@ -124,7 +124,7 @@
             android:name=".features.riivolution.ui.RiivolutionBootActivity"
             android:exported="false"
 			android:id="@+id/properties_start_with_riivolution"
-            android:theme="@style/DolphinBase" />
+            android:theme="@style/DolphinSettingsBase" />
 
         <service
             android:name=".services.SyncChannelJobService"
