--- a/Data/Sys/GameSettings/R9G.ini
+++ b/Data/Sys/GameSettings/R9G.ini
@@ -1,4 +1,4 @@
-# SMNE01, SMNJ01, SMNK01, SMNP01, SMNW01 - New Super Mario Bros. Wii
+# R9GEWR, R9GPWR - Legend of the Guardians: The Owls of Ga'Hoole
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -13,9 +13,8 @@
 # Add action replay cheats here.
 
 [Video_Hacks]
-# Vertex Rounding being enabled causes animation issues.
-VertexRounding = False
+# Add video hacks here.
 
-[Video_Stereoscopy]
-#Only affects overworld map
-StereoConvergence = 2211
+[Video_Settings]
+# Fixes FMVs
+ForceFiltering = False
