--- a/Data/Sys/GameSettings/RLI.ini
+++ b/Data/Sys/GameSettings/RLI.ini
@@ -1,5 +1,5 @@
 # RLIE64, RLIP64 - Lego Indiana Jones: The Original Adventures
 
-[Video_Settings]
+[Video_Hacks]
 # Fixes the alpha value of glpyh puzzles; see https://bugs.dolphin-emu.org/issues/12987
 MissingColorValue = 0xFFFFFF82
