--- a/Data/Sys/GameSettings/SLE.ini
+++ b/Data/Sys/GameSettings/SLE.ini
@@ -1,4 +1,4 @@
-# SMNE01, SMNJ01, SMNK01, SMNP01, SMNW01 - New Super Mario Bros. Wii
+# SLEE78, SLEP78 - Deepak Chopra's Leela
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -13,9 +13,7 @@
 # Add action replay cheats here.
 
 [Video_Hacks]
-# Vertex Rounding being enabled causes animation issues.
-VertexRounding = False
+# Add video hacks here
 
-[Video_Stereoscopy]
-#Only affects overworld map
-StereoConvergence = 2211
+[Video_Settings]
+SafeTextureCacheColorSamples = 0
