--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -122,8 +122,8 @@ dependencies {
     // For REST calls
     implementation 'com.android.volley:volley:1.2.1'
 
-    // For loading huge screenshots from the disk.
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    // For loading game covers from disk and GameTDB
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
 
     implementation 'com.nononsenseapps:filepicker:4.2.1'
 }
@@ -139,7 +139,7 @@ def getVersion() {
         logger.error(e + ': Cannot find git, defaulting to dummy version number')
     }
 
-    return '2.0-17826'
+    return '2.0-17827'
 }
 
 
