--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 
-def keystorePropertiesFile = rootProject.file("keystore.properties");
+def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
@@ -128,18 +128,9 @@ dependencies {
     implementation 'com.nononsenseapps:filepicker:4.2.1'
 }
 
-def getVersion() {
-    def versionNumber = '0.0'
-
-    try {
-        versionNumber = 'git describe --always --tags --abbrev=0'.execute([], project.rootDir).text
-                .trim()
-                .replaceAll(/(-0)?-[^-]+$/, "")
-    } catch (Exception e) {
-        logger.error(e + ': Cannot find git, defaulting to dummy version number')
-    }
-
-    return '2.0-17840'
+def getVersion() 
+{
+    return '2.0-17877'
 }
 
 
