--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -693,6 +693,7 @@ else()
   add_subdirectory(Externals/fmt EXCLUDE_FROM_ALL)
 endif()
 add_subdirectory(Externals/imgui)
+add_subdirectory(Externals/implot)
 add_subdirectory(Externals/glslang)
 add_subdirectory(Externals/spirv_cross)
 
