--- a/Source/Core/DolphinLib.props
+++ b/Source/Core/DolphinLib.props
@@ -436,6 +436,7 @@
     <ClInclude Include="Core\SysConf.h" />
     <ClInclude Include="Core\System.h" />
     <ClInclude Include="Core\TitleDatabase.h" />
+    <ClInclude Include="Core\WC24PatchEngine.h" />
     <ClInclude Include="Core\WiiRoot.h" />
     <ClInclude Include="Core\WiiUtils.h" />
     <ClInclude Include="DiscIO\Blob.h" />
@@ -1071,6 +1072,7 @@
     <ClCompile Include="Core\TitleDatabase.cpp" />
     <ClCompile Include="Core\WiiRoot.cpp" />
     <ClCompile Include="Core\WiiUtils.cpp" />
+    <ClCompile Include="Core\WC24PatchEngine.cpp" />
     <ClCompile Include="DiscIO\Blob.cpp" />
     <ClCompile Include="DiscIO\CISOBlob.cpp" />
     <ClCompile Include="DiscIO\CompressedBlob.cpp" />
