Android: Move host thread lock to a separate file

--- a/Source/Android/jni/CMakeLists.txt
+++ b/Source/Android/jni/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(main SHARED
   GameList/GameFile.cpp
   GameList/GameFile.h
   GameList/GameFileCache.cpp
+  Host.cpp
+  Host.h
   IniFile.cpp
   MainAndroid.cpp
   RiivolutionPatches.cpp
