--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -968,6 +968,8 @@ endif()
 
 include_directories(Externals/picojson)
 
+add_subdirectory(Externals/expr)
+
 add_subdirectory(Externals/rangeset)
 
 add_subdirectory(Externals/FatFs)
