--- a/Source/Core/DolphinQt/CMakeLists.txt
+++ b/Source/Core/DolphinQt/CMakeLists.txt
@@ -294,6 +294,8 @@ add_executable(dolphin-emu
   QtUtils/ParallelProgressDialog.h
 	QtUtils/PartiallyClosableTabWidget.cpp
   QtUtils/PartiallyClosableTabWidget.h
+  QtUtils/SetWindowDecorations.cpp
+  QtUtils/SetWindowDecorations.h
   QtUtils/SignalBlocking.h
   QtUtils/UTF8CodePointCountValidator.cpp
   QtUtils/UTF8CodePointCountValidator.h
@@ -395,8 +397,9 @@ PRIVATE
 if (WIN32)
   target_link_libraries(dolphin-emu
   PRIVATE
-		gdi32.lib
-		shell32.lib
+    gdi32.lib
+    shell32.lib
+    dwmapi.lib # Needed to set window decorations for dark theme
   )
 endif()
 
