try for system libmgba first
try for system libmgba first by alucryd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -945,8 +945,11 @@ if(NOT ENABLE_QT)
   set(USE_MGBA 0)
 endif()
 if(USE_MGBA)
-  message(STATUS "Using static libmgba from Externals")
-  add_subdirectory(Externals/mGBA)
+  find_package(LIBMGBA)
+  if(NOT LIBMGBA_FOUND)
+    message(STATUS "Using static libmgba from Externals")
+    add_subdirectory(Externals/mGBA)
+  endif()
 endif()
 
 find_package(SYSTEMD)
