--- a/Data/Sys/GameSettings/RZD.ini
+++ b/Data/Sys/GameSettings/RZD.ini
@@ -15,5 +15,11 @@
 EFBAccessEnable = True
 ImmediateXFBEnable = False
 
+# The game logic itself is ignoring VI interrupts 
+# and keeps updating shadow video registers.
+# Because of this, it is incompatible with VISkip.
+
+VISkip = False
+
 [Video_Enhancements]
 ArbitraryMipmapDetection = True
