Externals: Convert gtest to a submodule and update to v1.12.1
Externals: Convert gtest to a submodule and update to v1.12.1 by Pokechu22

--- a/.gitmodules
+++ b/.gitmodules
@@ -48,3 +48,7 @@
 [submodule "Externals/implot/implot"]
 	path = Externals/implot/implot
 	url = https://github.com/epezent/implot.git
+[submodule "Externals/gtest"]
+	path = Externals/gtest
+	url = https://github.com/google/googletest/
+	branch = v1.12.x
