sdl: update sdl2 to 038ccd7

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,10 +23,10 @@
 	url = https://github.com/KhronosGroup/SPIRV-Cross.git
 	branch = main
 	shallow = true
-[submodule "SDL"]
+[submodule "Externals/SDL/SDL"]
 	path = Externals/SDL/SDL
 	url = https://github.com/libsdl-org/SDL.git
-	branch = main
+	branch = SDL2
 	shallow = true
 [submodule "Externals/zlib-ng/zlib-ng"]
 	path = Externals/zlib-ng/zlib-ng
