--- a/.gitmodules
+++ b/.gitmodules
@@ -23,11 +23,6 @@
 	url = https://github.com/KhronosGroup/SPIRV-Cross.git
 	branch = main
 	shallow = true
-[submodule "Externals/SDL/SDL"]
-	path = Externals/SDL/SDL
-	url = https://github.com/libsdl-org/SDL.git
-	branch = SDL2
-	shallow = true
 [submodule "Externals/zlib-ng/zlib-ng"]
 	path = Externals/zlib-ng/zlib-ng
 	url = https://github.com/zlib-ng/zlib-ng.git
@@ -52,3 +47,9 @@
 	path = Externals/gtest
 	url = https://github.com/google/googletest/
 	branch = v1.12.x
+[submodule "SDL"]
+	path = Externals/SDL/SDL
+	url = https://github.com/libsdl-org/SDL.git
+	branch = SDL2
+[submodule "Externals/SDL/SDL"]
+	shallow = true
