Added rcheevos submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 	path = Externals/gtest
 	url = https://github.com/google/googletest/
 	branch = v1.12.x
+[submodule "Externals/rcheevos/rcheevos"]
+	path = Externals/rcheevos/rcheevos
+	url = https://github.com/RetroAchievements/rcheevos.git
