--- a/.gitmodules
+++ b/.gitmodules
@@ -37,6 +37,9 @@
 	url = https://github.com/randy408/libspng.git
 	branch = v0.7.2
 	shallow = true
+[submodule "Externals/VulkanMemoryAllocator"]
+	path = Externals/VulkanMemoryAllocator
+	url = https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
 [submodule "Externals/cubeb/cubeb"]
 	path = Externals/cubeb/cubeb
 	url = https://github.com/mozilla/cubeb.git
