Externals: Update cubeb to mozilla/cubeb@27d2a10
I got a bit lost in the original PR and missed the update to mozilla/cubeb@27d2a10 and some changes to build files.

--- a/Externals/cubeb/msvc/cubeb.vcxproj
+++ b/Externals/cubeb/msvc/cubeb.vcxproj
@@ -40,13 +40,13 @@
     <ClInclude Include="..\cubeb\src\cubeb_ringbuffer.h" />
     <ClInclude Include="..\cubeb\src\cubeb_ring_array.h" />
     <ClInclude Include="..\cubeb\src\cubeb_strings.h" />
+    <ClInclude Include="..\cubeb\src\cubeb_tracing.h" />
     <ClInclude Include="..\cubeb\src\cubeb_utils.h" />
     <ClInclude Include="..\cubeb\src\cubeb_utils_unix.h" />
     <ClInclude Include="..\cubeb\src\cubeb_utils_win.h" />
     <ClInclude Include="..\cubeb\src\cubeb-internal.h" />
     <ClInclude Include="..\cubeb\src\cubeb-jni.h" />
     <ClInclude Include="..\cubeb\src\cubeb-jni-instances.h" />
-    <ClInclude Include="..\cubeb\src\cubeb-sles.h" />
     <ClInclude Include="..\cubeb\src\cubeb-speex-resampler.h" />
     <ClInclude Include="..\cubeb\subprojects\speex\arch.h" />
     <ClInclude Include="..\cubeb\subprojects\speex\fixed_generic.h" />
